--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "bruno Alvaro rico Barrilero",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.3"
   },
