--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": " npx newman run ./tests/backendDefense.json -e ./tests/env/localDefense.json"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,8 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "cool-ascii-faces": "^1.3.4",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nedb": "^1.8.0"
   },
   "bugs": {
     "url": "https://github.com/gti-sos/SOS2122-26/issues"
