--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "first module",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "node index.js",
     "test": "npm run test-defense-spent-stats && npm run test-electricity-generation-stats",
     "test-defense-spent-stats": " npx newman run ./tests/backendDefense.json -e ./tests/env/localDefense.json",
@@ -13,13 +15,25 @@
     "type": "git",
     "url": "git+https://github.com/gti-sos/SOS2122-26.git"
   },
-  "author": "bruno Alvaro rico Barrilero",
+  "author": "Pablo y Manu",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.3",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "svelte-spa-router": "^3.2.0",
+    "sveltestrap": "^5.9.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.47.0"
   },
   "bugs": {
     "url": "https://github.com/gti-sos/SOS2122-26/issues"
