--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.3",
+    "morris.js": "^0.5.0",
     "nedb": "^1.8.0",
     "svelte-spa-router": "^3.2.0",
     "sveltestrap": "^5.9.0"
