--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "fusioncharts": "^3.18.0",
     "morris.js": "^0.5.0",
     "nedb": "^1.8.0",
     "request": "^2.88.2",
+    "svelte-fusioncharts": "^1.0.0",
     "svelte-spa-router": "^3.2.0",
     "sveltestrap": "^5.9.0"
   },
