--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Pablo y Manu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
