--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "Pablo y Manu",
   "license": "ISC",
   "dependencies": {
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
+    "blueimp-md5": "^2.19.0",
     "body-parser": "^1.20.0",
+    "chart.js": "^3.8.0",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
